src/objects/CHANNEL_ORDERS__Service_Order_Log__c.object
<CustomObject>
    <fields>
        <fullName>CHANNEL_ORDERS__Attachment__c</fullName>
        <label>Attachment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Class_Name__c</fullName>
        <description>Name of class which is creating log</description>
        <inlineHelpText>Name of class which is creating log</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Log_Detail__c</fullName>
        <label>Log Detail</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Log_Level__c</fullName>
        <description>Severity level of log(e.g. INFO, WARNING, ERROR)</description>
        <inlineHelpText>Severity level of log(e.g. INFO, WARNING, ERROR)</inlineHelpText>
        <label>Log Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Module_Name__c</fullName>
        <description>The name of the module/project/functional area that this functionality belongs to (e.g. Help Portal)</description>
        <inlineHelpText>The name of the module/project/functional area that this functionality belongs to (e.g. Help Portal)</inlineHelpText>
        <label>Module Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Object_Id__c</fullName>
        <description>Id of the object that the error is related to.</description>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Service Order Log</label>
    <listViews>
        <fullName>CHANNEL_ORDERS__All</fullName>
        <columns>NAME</columns>
        <columns>CHANNEL_ORDERS__Log_Level__c</columns>
        <columns>CHANNEL_ORDERS__Class_Name__c</columns>
        <columns>CHANNEL_ORDERS__Module_Name__c</columns>
        <columns>CHANNEL_ORDERS__Log_Detail__c</columns>
        <columns>CHANNEL_ORDERS__Object_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CHANNEL_ORDERS__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SOL-{0000}</displayFormat>
        <label>Service Order Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Order Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>